# VeloCad

./: .gitignore  CMakeLists.txt  README.md
data/: 1.step  2.xbf  AS5048a Magnetic Encoder.xbf
resource/: icon.aps  icon.rc  style.qss
src/: main.cpp
src/shapes/: DisplayScene.cpp  DisplayScene.h  make_shapes.h  shape.cpp  shape.h
src/widgets/: draw_widget.cpp  draw_widget.h  main_window.cpp  main_window.h
